--- a/themes/dohmh/layouts/about/single.html
+++ b/themes/dohmh/layouts/about/single.html
@@ -2,7 +2,7 @@
 
 <article class="container-fluid overflow-hidden" id="primary-content">
 
-  <div class="row my-4">
+  <div class="row mb-4 mt-2">
     <div class="col-md-8 col-sm-12 mx-auto">
 
       <nav aria-label="breadcrumb" class="mb-2">
@@ -12,7 +12,7 @@
             <li class="breadcrumb-item active" aria-current="page">{{ .Title }}</li>
         </ul>
       </nav>
-      
+
       <!--start main column-->
       <h1>{{- .Title -}}</h1>
         {{- .Content -}}
