--- a/themes/dohmh/layouts/data-explorer/indicator-catalog.html
+++ b/themes/dohmh/layouts/data-explorer/indicator-catalog.html
@@ -2,10 +2,10 @@
 
 <article class="container" id="skip-header-target">
     <div class="col-md-11 col-sm-12 mx-auto my-4">
-        
+
         <div class="row no-gutters mb-2">
             <div class="col">
-                <nav aria-label="breadcrumb" class="my-3">
+                <nav aria-label="breadcrumb" class="mb-3 mt-2">
                     <ul class="breadcrumb">
                         <li class="breadcrumb-item"><a href={{ relURL "" }}>Home</a></li>
                         <li class="breadcrumb-item"><a href={{ relURL "data-explorer" }}>Data Explorer</a></li>
@@ -14,7 +14,7 @@
                 </nav>
             </div>
         </div>
-        
+
         <h1><i class="fas fa-chart-line" aria-hidden="true" style="margin-right: 10px"></i>{{ .Title }}</h1>
         {{- .Content -}}
 
@@ -31,10 +31,10 @@
                     <div class="col-md-6">
 
                         <p class="fs-xl"><span class="home-label font-weight-bold">Indicator Name<span class="home-label badge badge-pill badge-light ml-2">ID</span></span></p>
-                        
+
                         <p class="fs-md"><span id="indName"> <!-- indicator name here --> </span></p>
                         <p class="fs-md"><span id="indDesc"> <!-- indicator description here --> </span></p>
-                        
+
                         <hr>
                         <p class="fs-xl"><span class="home-label font-weight-bold">Measures<span class="home-label badge badge-pill badge-light ml-2">ID</span></span></p>
                         <div id="measureList"></div>
@@ -54,27 +54,27 @@
                             <div id="sourceList"></div>
                         </p>
 
-                        
+
                         <div id="repoLink"></div>
 
-                        
+
 
                     </div>
 
                 </div>
-                
+
             </div>
-            
+
         </article>
-        
+
         <script>
-            // This function is called from de-text-search.html 
+            // This function is called from de-text-search.html
             function printToPage(x) {
-                
+
                 // print indicator info to page
                 document.getElementById('indName').innerHTML = `<p class="fs-md">${x.IndicatorName}&nbsp;<span class="badge badge-pill badge-light ml-2">${x.IndicatorID}</span></p>`
                 document.getElementById('indDesc').innerHTML = `<p class="fs-md"><i>${x.IndicatorDescription}</i></p>`
-                
+
                 // print data link to page
                 document.getElementById('repoLink').innerHTML = `<a href="https://github.com/nychealth/EHDP-data/tree/production/indicators/data/${x.IndicatorID}.json"><button class="btn btn-sm btn-block btn-outline-primary"><i class="fas fa-external-link-square-alt mr-1"></i>Download JSON from repo</button></a>`
 
@@ -109,5 +109,5 @@
             }
 
         </script>
-        
+
     {{- end -}}
