--- a/themes/dohmh/layouts/data-stories/flexible.html
+++ b/themes/dohmh/layouts/data-stories/flexible.html
@@ -6,23 +6,23 @@
 <article class="container-fluid" id="skip-header-target">
 
     <!-- language selection -->
-    
+
     {{- if .IsTranslated -}}
     <nav class="navbar navbar-default">
         <div class="container-fluid">
             <ul class="nav navbar-nav">
                 {{- range .Translations -}}
-                <li><a href="{{ .RelPermalink }}">{{ .Language.LanguageName }}</a>&nbsp;|&nbsp;</li>  
+                <li><a href="{{ .RelPermalink }}">{{ .Language.LanguageName }}</a>&nbsp;|&nbsp;</li>
                 {{- end -}}
             </ul>
         </div>
     </nav>
     {{- end -}}
-    
+
     <div class="row">
 
             <div class="col-xl-7 mx-auto">
-                <div class="my-2 mb-3">
+                <div class="mt-2 mb-3">
                     <nav aria-label="breadcrumb">
                         <ul class="breadcrumb">
                             <li class="breadcrumb-item"><a href={{ relURL "" }}>Home</a></li>
@@ -32,14 +32,14 @@
                               {{ else }}
                                 {{ .Title }}
                               {{ end }}</a></li>
-    
+
                         </ul>
                     </nav>
                 </div>
 
                 <h1 class="h2 data-stories mb-3"><i class="fas fa-passport" aria-hidden="true" style="margin-right: 10px"></i>{{ .Title }}</h1>
                 <div class="">
-    
+
                     {{ $src := .Resources.GetMatch .Params.image }}
                     {{ with $src }}
                     {{ $image := .Resize "1200x" }}
@@ -49,7 +49,7 @@
             </div>
 
 
-            
+
 
     </div>
 
