--- a/themes/dohmh/layouts/neighborhood-reports/section.html
+++ b/themes/dohmh/layouts/neighborhood-reports/section.html
@@ -1,7 +1,7 @@
 {{- define "main" -}}
 
 <article class="container-fluid overflow-hidden" id="primary-content" data-pagefind-ignore="all">
-  
+
   <style>
     .selectedOption {
       font-weight: bold;
@@ -9,7 +9,7 @@
   </style>
 
   <div class="row">
-    <div class="col-md-10 mx-auto my-4">
+    <div class="col-md-10 mx-auto mt-2 mb-4">
       <nav aria-label="breadcrumb" class="mb-2">
         <ul class="breadcrumb">
             <li class="breadcrumb-item"><a href={{ relURL "" }}>Home</a></li>
