--- a/themes/dohmh/layouts/take-action/dialog.html
+++ b/themes/dohmh/layouts/take-action/dialog.html
@@ -4,24 +4,24 @@
 
 <article class="container-fluid overflow-hidden" id="primary-content">
 
-  <div class="row my-4">
+  <div class="row mb-4">
     <div class="col-md-11 col-sm-12 mx-auto">
       <!--start main column-->
 
-      <nav aria-label="breadcrumb" class="mb-2">
+      <nav aria-label="breadcrumb" class="my-2">
         <ul class="breadcrumb mr-auto">
             <li class="breadcrumb-item"><a href={{ relURL "" }}>Home</a></li>
             <li class="breadcrumb-item"><a href="..">
               {{- with .Parent -}} {{ .Title }} </a></li>{{- end -}}
             <li class="breadcrumb-item active">{{ .Title }}</li>
-        </ul>                
+        </ul>
     </nav>
 
       <h1>{{ .Title }}</h1>
       <p>{{ .Content }}</p>
 
       <div class="row pt-2">
-      
+
         <div class="col-md-6 col-sm-12">
 
           <div class="row">
