--- a/themes/dohmh/layouts/take-action/email-electeds.html
+++ b/themes/dohmh/layouts/take-action/email-electeds.html
@@ -4,11 +4,11 @@
 
 <article class="container-fluid overflow-hidden" id="primary-content">
 
-  <div class="row my-4">
+  <div class="row mb-4">
     <div class="col-md-12 mx-auto">
       <!--start main column-->
 
-      <nav aria-label="breadcrumb" class="mb-2">
+      <nav aria-label="breadcrumb" class="my-2">
         <ul class="breadcrumb mr-auto">
             <li class="breadcrumb-item"><a href={{ relURL "" }}>Home</a></li>
             <li class="breadcrumb-item"><a href="..">
