--- a/themes/dohmh/layouts/take-action/section.html
+++ b/themes/dohmh/layouts/take-action/section.html
@@ -4,17 +4,17 @@
 
 <article class="container-fluid overflow-hidden" id="primary-content">
 
-  <div class="row my-4">
+  <div class="row mb-4">
     <div class="col-md-11 col-sm-12 mx-auto">
       <!--start main column-->
 
-      <nav aria-label="breadcrumb" class="mb-2">
+      <nav aria-label="breadcrumb" class="my-2">
         <ul class="breadcrumb mr-auto">
             <li class="breadcrumb-item"><a href={{ relURL "" }}>Home</a></li>
             <li class="breadcrumb-item active">{{ .Title }}
-              
+
             </li>
-        </ul>                
+        </ul>
       </nav>
 
       <h1>{{ .Title }}</h1>
