add dont-collapse-sm class to DE sidebar mobile fxn

--- a/themes/dohmh/layouts/data-explorer/single.html
+++ b/themes/dohmh/layouts/data-explorer/single.html
@@ -492,7 +492,7 @@
 
                                 <a href="#" class="badge badge-pill badge-light d-block d-sm-none mb-1" data-toggle="collapse" data-target="#tableSidebar" aria-expanded="false" aria-controls="tableSidebar"><i class="fas fa-cog mr-1" aria-hidden="true"></i>Display options</a>
 
-                                <div id="tableSidebar" class="collapse show">
+                                <div id="tableSidebar" class="collapse dont-collapse-sm">
                                 <p class="fs-xs mb-0"><i data-toggle="modal" data-target="#geoModal" class="fas fa-question-circle float-right helper text-primary fs-sm"></i></button>Boundaries:</p>
                                 <div class="border py-1 mb-2 optionbox">
 
@@ -536,7 +536,7 @@
                             <a href="#" class="badge badge-pill badge-light d-block d-sm-none mb-1" data-toggle="collapse" data-target="#mapSidebar" aria-expanded="false" aria-controls="mapSidebar"><i class="fas fa-cog mr-1" aria-hidden="true"></i>Display options</a>
 
 
-                            <div id="mapSidebar" class="collapse show">
+                            <div id="mapSidebar" class="collapse dont-collapse-sm">
                                 <p class="fs-xs mb-0"><i data-toggle="modal" data-target="#measureModal" class="fas fa-question-circle float-right helper text-primary fs-sm"></i>Show as:</p>
                                 <div class="border optionbox py-1 mb-2">
                                     <div class="" aria-labelledby="dropdownMapMeasures">
@@ -580,7 +580,7 @@
 
                             <a href="#" class="badge badge-pill badge-light d-block d-sm-none mb-1" data-toggle="collapse" data-target="#trendSidebar" aria-expanded="false" aria-controls="trendSidebar"><i class="fas fa-cog mr-1" aria-hidden="true"></i>Display options</a>
 
-                            <div id="trendSidebar" class="collapse show">
+                            <div id="trendSidebar" class="collapse dont-collapse-sm">
                                 <p class="fs-xs mb-0"><i data-toggle="modal" data-target="#trendModal" class="fas fa-question-circle float-right helper text-primary fs-sm"></i>Show by:</p>
                                 <div class="border optionbox">
                                     <div class="" aria-labelledby="dropdownTrendComparisons">
@@ -613,7 +613,7 @@
 
                                 <a href="#" class="badge badge-pill badge-light d-block d-sm-none mb-1" data-toggle="collapse" data-target="#linksSidebar" aria-expanded="false" aria-controls="linksSidebar"><i class="fas fa-cog mr-1" aria-hidden="true"></i>Display options</a>
 
-                                <div id="linksSidebar" class="collapse show">
+                                <div id="linksSidebar" class="collapse dont-collapse-sm">
                                     <p class="fs-xs mb-0"><i data-toggle="modal" data-target="#linksModal" class="fas fa-question-circle float-right helper text-primary fs-sm"></i>Show as:</p>
                             
                                 
