rename data story chart-wrapper class

--- a/assets/scss/__portal-custom.scss
+++ b/assets/scss/__portal-custom.scss
@@ -1246,12 +1246,12 @@ th.tablehead {
     // background-color: #e5f4eb50;
 }
 
-// .chart-wrapper {
-//     padding: 40px 40px 30px 40px;
-//     margin: 25px 0px;
-//     border-top: 3px solid #D8D8D8;
-//     border-bottom: 3px solid #D8D8D8;
-// }
+.chart-wrapper-ds {
+    padding: 40px 40px 30px 40px;
+    margin: 25px 0px;
+    border-top: 3px solid #D8D8D8;
+    border-bottom: 3px solid #D8D8D8;
+}
 
 // slightly wider dropdown menu for the Tools header dropdown
 .wider-menu {
